--- a/assets/css/weather.css
+++ b/assets/css/weather.css
@@ -6,20 +6,22 @@
     font-family: 'Open Sans', sans-serif;
 }
 body {
-    background: white;
+    background: black;
 }
 h1 {
     color: transparent;
     padding: 18px 0;
     text-align: center;
     font-size: 1.75rem;
-    background: blue;
+    background: rgb(30, 30, 30);
 }
 h3 {
     font-size: 1.5rem;
+    color: white;
 }
 h5 {
     font-size: 2.95rem;
+    color: white;
 }
 .container {
     display: flex;
@@ -31,16 +33,19 @@ h5 {
 }
 .weather-input input {
     width: 100%;
-    height: 46px;
+    height: 40px;
     outline: none;
     padding: 0 15px;
     margin: 10px 0 20px 0;
     font-size: 1.07rem;
-    border-radius: 4px;
-    border: 1px solid white;
+    border-radius: 15px;
+    border: 1px solid rgb(30, 30, 30);
+    background: rgb(30, 30, 30);
+    color: white;
 }
 .weather-input button {
     width: 100%;
+    height: 40px;
     padding: 10px 0;
     cursor: pointer;
     outline: none;
@@ -48,10 +53,11 @@ h5 {
     color: white;
     font-size: 1rem;
     border-radius: 15px;
-    background: blue;
+    background: rgb(30, 30, 30);
 }
 .weather-input .location-btn {
-    background: grey;
+    background: rgb(26, 26, 66);
+    height: 40px;
 }
 .weather-data {
     width: 100%;
@@ -61,7 +67,7 @@ h5 {
     display: flex;
     border-radius: 15px;
     padding: 20px 70px 20px 20px;
-    background: blue;
+    background: rgb(30, 30, 30);
     justify-content: space-between;
 }
 .current-weather h2 {
@@ -96,7 +102,7 @@ h5 {
     color: white;
     padding: 18px 16px;
     border-radius: 15px;
-    background: grey;
+    background: rgb(30, 30, 30);
     width: calc(100% / 5);
 }
 .weather-cards .card img {
